--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,36 @@
+/**
+ * @file App.css
+ * @description stiling for main app screen
+ * @author Destiny
+ * @date 2025-01-31
+ * 
+ * @notes
+ * There is some weirdness happening with the width and the form container
+ */
 .app {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;  /* Align items to the left */
+  align-items: flex-start;  
   width: 5000px;
-  margin: 0;  /* Reset margin */
-  background-color: rgba(255, 255, 255, 0.906);
-  
-  
+  margin: 0;  
+  background-color: rgba(255, 255, 255, 0.906);  
 }
+
 .logo-container {
   display: flex;
-  flex-direction: column;  /* Stack logo and header vertically */
-  margin-top: 0px;  /* Space between logo and header */
-  margin-left: 675px;  /* Moves logo-container 100px to the right */
-  z-index: 10;  /* Ensure the logo is above the header */
+  flex-direction: column;  
+  margin-top: 0px;  
+  margin-left: 675px;   
+  z-index: 10;  
   margin-bottom: 650px;
+}
 
+.logo {
+  z-index: 10;
+  width: 150px; 
+  height: auto; 
+  margin-top: 40px; 
 }
 
 .header-container {
@@ -25,37 +39,28 @@
   height: 225px;
   background-color: #2638c4;
   display: flex;
-  position: absolute;  /* Use absolute positioning */
-  top: 0;  /* Position it at the top */
-  right: 0;  /* Position it on the left */
-  justify-content: flex-end; /* This aligns the h1 to the right */
+  position: absolute;  
+  top: 0; 
+  right: 0;  
+  justify-content: flex-end; 
   padding-top: 70px;
   padding-right: 475px;
 }
-.form-container {
-  position: relative;  /* Changed from absolute to relative */
-  top: 200px;  /* Start below the header */
-  width: 5000px;  /* Ensure it takes the full width */
-  height: calc(100vh - 225px);  /* Fills remaining screen height */
 
-  display: flex;
-  flex-direction: column;
-
-}
-
-
-.logo {
-  z-index: 10;
-  width: 150px; /* Adjust the logo width */
-  height: auto; /* Maintain aspect ratio */
-  margin-top: 40px; /* Space between logo and header */
-}
 header {
   width: 100%;
- 
 }
 
 header h1 {
 z-index: 6;
 margin: 0;
+}
+
+.form-container {
+  position: relative; 
+  top: 200px;  
+  width: 5000px;  
+  height: calc(100vh - 225px);  /* Fill space not taken by blue banner */
+  display: flex;
+  flex-direction: column;
 }
